# rehorsed

./: .gitignore
.github/workflows/: deploy-secrets.yml  deploy.yml
app/: .gitignore  deploy_ios_ipa.sh  env.example  pubspec.yaml  run-android.ps1  samples_manifest.json
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/rehorsed/: MainActivity.kt
app/docs/: CACHING_SYSTEM.md  OFFLINE_AUTO_SAVE.md  OFFLINE_TRANSFORMATION.md  build.md  main.md
app/docs/bugs/: README_SECTION_GAP_BUG.md  SECTION_GAP_CURRENT_STATE.md  SECTION_GAP_DIAGNOSTIC_GUIDE.md
app/docs/dart_ui_guide/: flutter_overflow_prevention_guide.md
app/docs/features/: BLUETOOTH_QUICK_GUIDE.md  CHANGELOG_mic_recording_rewrite.md  DEBUG_RECORDING_LINES.md  FINAL_AUDIO_SYSTEM_IMPLEMENTATION.md  FINAL_FIXES_mic_recording.md  LOG_LEVELS.md  PRECISE_SAMPLE_POSITIONING_PLAN.md  REALTIME_COLLABORATION_SYSTEM.md  bluetooth_quality_limitation.md  logging.md  microphone_dual_output_architecture.md  microphone_integration.md  microphone_recording_test_guide.md  patterns_draft_and_switching.md  position_retained_scrolling.md  recording.md  websockets.md
app/docs/features/future/: android_deep_link_setup.md
app/docs/features/sequencer/: sections_management_widget.md  simple_wav_writer_integration.md  working_state_auto_save.md
app/docs/features/sunvox_integration/: README.md  SUNVOX_LIBRARY_ARCHITECTURE.md  column_canceling_explanation.md  effects_implementation_guide.md  no_clone.md  recording.md  sunvox_rehorsed_tweaks.md
app/ios/: Podfile
app/ios/Flutter/: Debug.xcconfig  Profile.xcconfig  Release.xcconfig
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/config/: feature_flags.dart
app/lib/ffi/: playback_bindings.dart  sample_bank_bindings.dart  table_bindings.dart
app/lib/models/: checkpoint.dart  library_item.dart  pattern.dart
app/lib/screens/: library_screen.dart  projects_screen.dart  projects_settings_screen.dart  sequencer_screen.dart  sequencer_screen_v2.dart  sequencer_settings_screen.dart
app/lib/services/: audio_cache_service.dart  local_checkpoint_service.dart  local_library_service.dart  local_pattern_service.dart  local_storage_service.dart  tutorial_prefs_service.dart  tutorial_service.dart
app/lib/services/cache/: CACHING_SYSTEM.md  README.md  local_cache_service.dart  working_state_cache_service.dart
app/lib/services/snapshot/: debug_snapshot.dart  export.dart  import.dart  snapshot_table_validator.dart
app/lib/state/: app_state.dart  audio_player_state.dart  library_samples_state.dart  library_state.dart  patterns_state.dart
app/lib/state/sequencer/: edit.dart  microphone.dart  multitask_panel.dart  playback.dart  recording.dart  recording_waveform.dart  sample_bank.dart  sample_browser.dart  table.dart
app/lib/utils/: app_colors.dart  id_generator.dart  local_audio_path.dart  pattern_name_generator.dart  sample_offset_calculator.dart  share_utils.dart
app/lib/widgets/: app_header_widget.dart  bottom_audio_player.dart  pattern_preview_widget.dart  pattern_recordings_overlay.dart  simplified_header_widget.dart
app/lib/widgets/sequencer/v1/: edit_buttons_widget.dart  generic_slider.dart  section_settings_widget.dart  sequencer_body.dart  sound_grid_side_control_widget.dart  sound_grid_widget.dart  sound_settings.dart  wheel_select_widget.dart
app/lib/widgets/sequencer/v2/: edit_buttons_widget.dart  layer5_recording_widget.dart  layer_settings_widget.dart  line_mic_waveform_widget.dart  microphone_settings_widget.dart  offset_controls_widget.dart  recording_widget.dart  sample_banks_widget.dart  sample_selection_widget.dart  section_creation_overlay.dart  section_management_widget.dart  sequencer_body.dart  sequencer_header_widget.dart  sequencer_playback_control_widget.dart  share_widget.dart  sound_grid_side_control_widget.dart  sound_grid_widget.dart  sound_settings.dart  top_multitask_panel_widget.dart  wheel_select_widget.dart
app/lib/widgets/sequencer_updated/: simplified_sound_grid.dart
app/native/: CMakeLists.txt  log.h  microphone_input.h  microphone_input.mm  microphone_input_old.mm.backup  playback.h  playback_sunvox.mm  recording.h  recording.mm  sample_bank.h  sample_bank.mm  sunvox_wrapper.h  sunvox_wrapper.mm  table.h  table.mm
app/native/sunvox_lib/: MODIFICATIONS.md
app/native/sunvox_lib/lib_sundog/: sundog_makefile.inc
app/native/sunvox_lib/lib_sunvox/: sunvox_engine.cpp  sunvox_engine.h  sunvox_engine_audio_callback.cpp
app/native/sunvox_lib/lib_sunvox/psynth/: psynth.h  psynths_input.cpp
app/native/sunvox_lib/sunvox_lib/headers/: sunvox.h
app/native/sunvox_lib/sunvox_lib/main/: sunvox_lib.cpp
app/native/sunvox_lib/sunvox_lib/make/: MAKE_IOS
app/test/: widget_test.dart
schemas/0.0.1/pattern/: checkpoint.json  pattern.json
server/: .example.env  README.md  test_s3_upload.py
server/app/http_api/: deep_links.py  threads.py
tools/node_graph_viz/: README.md
tools/node_graph_viz/node_graph_viz.egg-info/: PKG-INFO
